test/log/arithmetic/vwsmulq_vx_i32.txt
vwsmulq_vx_i32.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwsmulq_vx_i32.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwsmulq_vx_i32.c:14:40: warning: backslash and newline separated by space
   14 |  #define data_init(a, b, n, threshold) \
      |                                         
vwsmulq_vx_i32.c:15:35: warning: backslash and newline separated by space
   15 |      for(int i = 0; i < n; i++) { \
      |                                    
vwsmulq_vx_i32.c:16:40: warning: backslash and newline separated by space
   16 |              a[i] = random(threshold); \
      |                                         
vwsmulq_vx_i32.c:17:27: warning: backslash and newline separated by space
   17 |              b[i] = a[i]; \
      |                            
vwsmulq_vx_i32.c:23:6: warning: no previous prototype for 'vwsmulq_vx_i32_golden' [-Wmissing-prototypes]
   23 | void vwsmulq_vx_i32_golden(int32_t *a,int32_t b,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vwsmulq_vx_i32.c: In function 'main':
vwsmulq_vx_i32.c:50:35: error: subscripted value is neither array nor pointer nor vector
   50 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwsmulq_vx_i32.c:51:79: error: subscripted value is neither array nor pointer nor vector
   51 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwsmulq_vx_i32.c:36:17: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   36 |     int64x8x2_t result = {0};
      |                 ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsmulq_vx_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwsmulq_vx_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwsmulq_vx_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsmulq_vx_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed